tests/baselines/reference/decoratorOnImportEquals2(strict=true).errors.txt
decoratorOnImportEquals2_0.ts(1,12): error TS7005: Variable 'X' implicitly has an 'any' type.
decoratorOnImportEquals2_1.ts(1,1): error TS1206: Decorators are not valid here.


==== decoratorOnImportEquals2_1.ts (1 errors) ====
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    import lib = require('./decoratorOnImportEquals2_0');
    
    declare function dec<T>(target: T): T;
==== decoratorOnImportEquals2_0.ts (1 errors) ====
    export var X;
               ~
!!! error TS7005: Variable 'X' implicitly has an 'any' type.
    